--- a/backend/package.json
+++ b/backend/package.json
@@ -18,15 +18,26 @@
     "wagmi": "^2.14.9"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-ignition": "^0.15.9",
+    "@nomicfoundation/hardhat-ignition-viem": "^0.15.9",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.12",
+    "@nomicfoundation/hardhat-viem": "^2.0.6",
+    "@nomicfoundation/ignition-core": "^0.15.9",
+    "@types/chai": "^4.0.0",
+    "@types/chai-as-promised": "^7.1.8",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^20.14.8",
     "@types/react": "^19.0.6",
+    "chai": "^4.0.0",
     "dotenv": "^16.0.3",
     "hardhat": "^2.22.0",
-    "viem": "^2.0.0",
-    "@types/chai": "^4.0.0",
-    "chai": "^4.0.0",
-    "typescript": "^5.0.0"
+    "hardhat-gas-reporter": "^1.0.10",
+    "solidity-coverage": "^0.8.14",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.0.0",
+    "viem": "^2.0.0"
   }
 }
