--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.55.3",
     "clsx": "^2.1.1",
+    "ethers": "^5.7.2",
     "lucide-react": "^0.475.0",
     "next": "^15.1.4",
+    "openai": "^4.85.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
