--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@rainbow-me/rainbowkit": "^2.2.3",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.55.3",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "ethers": "^5.7.2",
     "lucide-react": "^0.475.0",
